# wine-vfm

./: .gitignore  2.ipynb  3.ipynb  4.ipynb  5.ipynb  LICENSE  README.md  app.py  day1.ipynb  day2.ipynb  ensemble_model.joblib  hello.py  llama.py  memory.json  modal_app.py  pyproject.toml  specialist_ephemeral.py  specialist_service.py  specialist_service2.py  wine_agent_framework.py
agents/: agent.py  autonomous_planning_agent.py  ensemble_agent.py  frontier_agent.py  messaging_agent.py  neural_network_agent.py  planning_agent.py  preprocessor.py  scanner_agent.py  specialist_agent.py
utils/: deep_neural_network.py  evaluator.py  items.py  listings.py  log_utils.py  preprocessor.py  vfm.py
