[project]
name = "wine-vfm"
version = "0.1.0"
description = "Multi-agent system for wine value-for-money scoring: RAG, fine-tuned specialist, and ensemble agents behind a Gradio UI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "joblib>=1.5.3",
    "modal>=1.5.1",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "plotly>=6.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
    "types-requests>=2.33.0.20260712",
]
